# smart-sec-cam

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  create-certs.sh  docker-compose.yml  requirements.txt  server.py  start-server.sh  streamer.py
.github/workflows/: codeql.yml  docker-build.yml
backend/: Dockerfile  pyproject.toml  redis_image_receiver.py  requirements.txt  server.py  setup.cfg
backend/smart_sec_cam/auth/: authentication.py  database.py  models.py
backend/smart_sec_cam/detectors/: Dockerfile  detect_faces.py  detect_motion.py  detect_people.py  face.py  motion.py  person.py
backend/smart_sec_cam/motion/: Dockerfile  detection.py  main.py
backend/smart_sec_cam/redis/: Dockerfile  __init__.py  image_receiver.py  redis.conf
backend/smart_sec_cam/server/: Dockerfile  docker-entrypoint.sh  server.py
backend/smart_sec_cam/streamer/: camera.py  run.sh  streamer.py
backend/smart_sec_cam/video/: manager.py  writer.py
deployment/: docker-compose.yml
frontend/smart-sec-cam/: .env  Dockerfile  docker-entrypoint.sh  package-lock.json  package.json
frontend/smart-sec-cam/public/: index.html  manifest.json
frontend/smart-sec-cam/src/: App.css  App.js  index.css  index.js  socket.js
frontend/smart-sec-cam/src/components/: ImageViewer.css  ImageViewer.js  Login.js  NavBar.js  VideoList.css  VideoList.js  VideoPlayer.js
frontend/smart-sec-cam/src/pages/: Login.css  Login.js  Register.css  Register.js  VideoList.css  VideoList.js
frontend/smart-sec-cam/src/utils/: GetTokenTTL.js  RefreshToken.js  ValidateToken.js
nginx/: nginx.conf
redis/: gen-test-certs.sh
scripts/: create-streamer-service.sh  smart-sec-cam.base.service
streamer/: camera.py  picamera-requirements.txt  redis_image_sender.py  requirements.txt  run.sh  streamer.py
