[metadata]
name = smart-sec-cam
version = 0.3.6
author = Scott Barnes
author_email = sgbarnes@protonmail.com
description = A privacy-focused intelligent security camera system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scottbarnesg/smart-sec-cam
classifiers =
    Environment :: Web Environment
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    redis >= 4.0.2


[options.packages.find]
where = .

[options.extras_require]
streamer =
    opencv-python-headless >= 4.5.5
    numpy >= 1.22.0
detector =
    opencv-python-headless >= 4.5.5
    numpy >= 1.22.0
    imutils >= 0.5.4
server =
    flask >= 2.0.2
    flask-cors >= 3.0.10
    flask-socketio == 5.1.0
    eventlet >= 0.33.0
    opencv-python-headless >= 4.5.5
    pyjwt >= 2.4.0
picam =
    picamera
